adds travis CI files

--- a/.env.testing
+++ b/.env.testing
@@ -1,16 +1,17 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=testing
 APP_KEY=base64:jjF2XTWYeCRnwtD5W7ruNFMCt99iJS+atk3PNU4B/qI=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=sqlite
-DB_DATABASE=:memory:
+DB_CONNECTION=testing
+DB_TEST_USERNAME=root
+DB_TEST_PASSWORD=
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-SESSION_DRIVER=file
+CACHE_DRIVER=array
+SESSION_DRIVER=array
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
