--- a/.env.testing
+++ b/.env.testing
@@ -5,9 +5,12 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=testing
-DB_TEST_USERNAME=root
-DB_TEST_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=homestead_test
+DB_USERNAME=root
+DB_PASSWORD=""
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=array
